versioned_docs/version-1.1.0/api/Unity.Netcode.Transports.UTP.md
---
id: Unity.Netcode.Transports.UTP
title: Unity.Netcode.Transports.UTP
---

# Namespace Unity.Netcode.Transports.UTP










### Classes

#### ErrorUtilities


Helper utility class to convert error codes to human readable error
messages.



#### UnityTransport


The Netcode for GameObjects NetworkTransport for UnityTransport. Note:
This is highly recommended to use over UNet.



### Structs

#### NetworkMetricsContext


Caching structure to track network metrics related information.



#### UnityTransport.ConnectionAddressData


Structure to store the address to connect to



#### UnityTransport.SimulatorParameters


Parameters for the Network Simulator



### Interfaces

#### INetworkStreamDriverConstructor


Provides an interface that overrides the ability to create your own
drivers and pipelines



### Enums

#### UnityTransport.ProtocolType


Enum type stating the type of protocol





